WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104157
Connection::waitForMessage shouldn't use the message ID
https://bugs.webkit.org/show_bug.cgi?id=104157
Summary
Connection::waitForMessage shouldn't use the message ID
Anders Carlsson
Reported
2012-12-05 12:48:08 PST
Connection::waitForMessage shouldn't use the message ID
Attachments
Patch
(7.37 KB, patch)
2012-12-05 12:52 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(7.66 KB, patch)
2012-12-05 13:10 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-12-05 12:52:04 PST
Created
attachment 177813
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-05 12:53:32 PST
Attachment 177813
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/Platform/CoreIPC/Connection.h:245: Local variables should never be PassOwnPtr (see
http://webkit.org/coding/RefPtr.html
). [readability/pass_ptr] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 3
2012-12-05 12:57:27 PST
Comment on
attachment 177813
[details]
Patch
Attachment 177813
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/15147608
Anders Carlsson
Comment 4
2012-12-05 13:10:53 PST
Created
attachment 177816
[details]
Patch
WebKit Review Bot
Comment 5
2012-12-05 13:13:10 PST
Attachment 177816
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/Platform/CoreIPC/Connection.h:245: Local variables should never be PassOwnPtr (see
http://webkit.org/coding/RefPtr.html
). [readability/pass_ptr] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 6
2012-12-05 14:17:39 PST
Comment on
attachment 177816
[details]
Patch Clearing flags on attachment: 177816 Committed
r136762
: <
http://trac.webkit.org/changeset/136762
>
WebKit Review Bot
Comment 7
2012-12-05 14:17:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug