Connection::waitForMessage shouldn't use the message ID https://bugs.webkit.org/show_bug.cgi?id=104157

Reviewed by Andreas Kling.

Pass the message receiver name and message name to waitForMessage and use them for lookups instead of
the message ID.

* Platform/CoreIPC/Connection.cpp:
(CoreIPC::Connection::createSyncMessageEncoder):
(CoreIPC::Connection::waitForMessage):
(CoreIPC::Connection::processIncomingMessage):
* Platform/CoreIPC/Connection.h:
(CoreIPC::Connection::waitForAndDispatchImmediately):


Canonical link: https://commits.webkit.org/122340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136762 268f45cc-cd09-0410-ab3c-d52691b4dbfc